--- a/index.html
+++ b/index.html
@@ -2,30 +2,36 @@
 <html lang="">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.gstatic.com">
+    
 </head>
 
 <body>
-    <ul id="Menu">
-        <li class="Links">
-            <a href="#Welcome">Home</a>
-        </li>
-        <li class="Links">
-            <a href="#Videos">My Videos</a>
-        </li>
-        <li class="Links">
-            <a href="#Work">Work</a>
-        </li>
-        <li class="Links">
-            <a href="#Writing">Writings</a>
-        </li>
-        <li class="Links">
-            <a href="#Contacts">Contacts</a>
-        </li>
-    </ul>
+
+    <center>
+        <ul class="Menu">
+            <li class="Links">
+                <a href="#Welcome">Home</a>
+            </li>
+            <li class="Links">
+                <a href="#Videos">My Videos</a>
+            </li>
+            <li class="Links">
+                <a href="#Work">Work</a>
+            </li>
+            <li class="Links">
+                <a href="#Writing">Writings</a>
+            </li>
+            <li class="Links">
+                <a href="#Contacts">Contacts</a>
+            </li>
+        </ul>
+    </center>
+
     <section id="Welcome">
         <img id="img1" src="Sir_Tim_Berners-Lee_(cropped).jpg">
         <h1>
@@ -75,6 +81,31 @@
 
 
     </section>
+
+    <section id="Contacts">
+        <h1>Contacts</h1>
+        <div class="Line"></div>
+        <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.588464315904!2d72.88846041490193!3d19.125701687059447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c97f346053b7%3A0xacf72f56793d190a!2sWhitehat%20Education%20Technology%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1615031926024!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <br>
+
+        <div class="C1">
+            
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">
+                <i class="fa fa-envelope"></i>
+                &nbsp;
+                <h3>ashraygandhi18@gmail.com</h3>
+
+            </a>
+            <a href="#">
+                <i class="fa fa-instagram"></i>
+                &nbsp;
+                <h3>MyInstagramID</h3>
+            </a>
+
+        </div>
+
+    </section>
 </body>
 
-</html>
+</html> 
